# QtWebService

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO  qtwebserviceapi.h
docs/: PathSpecifications.md
include/: QWebMiddleWare.h  QWebMiddleWareRegistrar.h  QWebService.h  QWebServiceConfig.h
include/middleware/: TemplateParser.h
include/private/: qtwebserviceapi.h  qtwebservicefwd.h
include/router/: QWebRequest.h  QWebResponse.h  QWebRoute.h  QWebRoutedRequest.h  QWebRouter.h
include/test/: TestUtils.h
include/utils/: QStructObjBuilder.h
lib/: QWebMiddleWareRegistrar.cpp  QWebService.cpp  QWebServiceConfig.cpp
lib/middleware/: TemplateParser.cpp
lib/router/: QWebRequest.cpp  QWebResponse.cpp  QWebRoute.cpp  QWebRoutePath.cpp  QWebRouter.cpp
lib/utils/: QStructObjBuilder.cpp
share/: CMakeConfig.cmake  libpkgconfig.pc
src/router/: qhttproute.cpp  qhttproute.h  qhttproutedrequest.cpp  qhttproutedrequest.h  qhttproutepath.h  qhttprouter.cpp  qhttprouter.h
src/util/: qoptional.cpp  qoptional.h
test/: CMakeLists.txt  CatchUtils.h  QWebRoutePathTest.h  QWebRouteTest.cpp  QWebRouteTest.h  QWebRouterTest.cpp  QWebServiceTest.cpp  TestUtils.h  main.cpp  qhttproutepathtest.cpp  qhttproutetest.cpp  qhttproutetest.h
test/utils/: QStructObjTest.cpp
